force-app/main/default/objects/UOM__c/UOM__c.object-meta.xml
<CustomObject>
    <label>Unit of Measure</label>
    <pluralLabel>Units of Measure</pluralLabel>
    <nameField>
        <label>UOM Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Master list of Units of Measure used across the FMCG CRM for product packaging, ordering, and inventory management.</description>
</CustomObject>