force-app/main/default/objects/UOM__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Description</label>
    <type>TextArea</type>
    <description>Description of the unit of measure</description>
</CustomField>