force-app/main/default/objects/UOM__c/fields/Is_Base_Unit__c.field-meta.xml
<CustomField>
    <fullName>Is_Base_Unit__c</fullName>
    <label>Is Base Unit</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>Whether this is the base unit for its UOM type (e.g., Piece for Count, Gram for Weight)</description>
</CustomField>