force-app/main/default/objects/UOM__c/fields/UOM_Code__c.field-meta.xml
<CustomField>
    <fullName>UOM_Code__c</fullName>
    <label>UOM Code</label>
    <type>Text</type>
    <length>10</length>
    <required>true</required>
    <unique>true</unique>
    <externalId>true</externalId>
    <description>Short code for the unit of measure (e.g., PCS, BOX, CS, KG, LTR)</description>
</CustomField>