force-app/main/default/objects/UOM__c/fields/UOM_Type__c.field-meta.xml
<CustomField>
    <fullName>UOM_Type__c</fullName>
    <label>UOM Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Count</fullName><default>true</default><label>Count</label></value>
            <value><fullName>Weight</fullName><default>false</default><label>Weight</label></value>
            <value><fullName>Volume</fullName><default>false</default><label>Volume</label></value>
            <value><fullName>Length</fullName><default>false</default><label>Length</label></value>
            <value><fullName>Packaging</fullName><default>false</default><label>Packaging</label></value>
        </valueSetDefinition>
    </valueSet>
    <description>Category of the unit of measure</description>
</CustomField>