force-app/main/default/objects/UOM__c/validationRules/UOM_Code_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>UOM_Code_Required</fullName>
    <active>true</active>
    <description>UOM Code is required</description>
    <errorConditionFormula>ISBLANK(UOM_Code__c)</errorConditionFormula>
    <errorDisplayField>UOM_Code__c</errorDisplayField>
    <errorMessage>UOM Code is required.</errorMessage>
</ValidationRule>