force-app/main/default/objects/UOM__c/listViews/Active_UOMs.listView-meta.xml
<ListView>
    <fullName>Active_UOMs</fullName>
    <columns>NAME</columns>
    <columns>UOM_Code__c</columns>
    <columns>UOM_Type__c</columns>
    <columns>Is_Base_Unit__c</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Active UOMs</label>
</ListView>