force-app/main/default/objects/UOM__c/listViews/All_UOMs.listView-meta.xml
<ListView>
    <fullName>All_UOMs</fullName>
    <columns>NAME</columns>
    <columns>UOM_Code__c</columns>
    <columns>UOM_Type__c</columns>
    <columns>Is_Base_Unit__c</columns>
    <columns>Is_Active__c</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Units of Measure</label>
</ListView>